# ptzCamera

devel/: .catkin  setup.sh
devel/lib/cv_bridge_tutorial_pkg/: sample_cv_bridge_node
devel/lib/pkgconfig/: customplugins.pc  cv_bridge_tutorial_pkg.pc  description.pc  main.pc  slidingmcontroller.pc
devel/share/customplugins/cmake/: custompluginsConfig.cmake
devel/share/cv_bridge_tutorial_pkg/cmake/: cv_bridge_tutorial_pkgConfig.cmake
devel/share/description/cmake/: descriptionConfig.cmake
devel/share/main/cmake/: mainConfig.cmake
devel/share/slidingmcontroller/cmake/: slidingmcontrollerConfig.cmake
src/customplugins/: CMakeLists.txt
src/customplugins/src/: hello_world.cc
src/description/: CMakeLists.txt  package.xml
src/description/meshes/: base.stl  building.pcd  building2.pcd  building2_90.pcd  building3.pcd  building4.pcd  building5.pcd  building7.pcd  building7_f.pcd  building7_f.stl  building_f.pcd  building_scale0.25.pcd  building_scale0.5.pcd  camera.stl  cloud_file.pcd  lower.stl  upper.stl
src/description/urdf/: controller.xacro  controller2.xacro  description.urdf.xacro  robot_core.xacro  sensor.xacro
src/main/: CMakeLists.txt  package.xml
src/main/config/: ros_controllers.yaml  ros_controllers2.yaml  rviz.rviz
src/main/launch/: main.launch  main2.launch  mainHojing.launch  ros_controller.launch  ros_controller2.launch
src/slidingmcontroller/: CMakeLists.txt  Theta.txt  package.xml  phi.txt
src/slidingmcontroller/scripts/: torque-controller.py
